--- a/manifest.json
+++ b/manifest.json
@@ -10,11 +10,12 @@
   },
   "permissions": [
     "tabs",
-    "storage"
+    "storage",
+    "webNavigation"
   ],
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent": true
   },
   "content_scripts": [
     {
