--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,10 @@
       "matches": ["<all_urls>"],
       "js": ["content.js"]
     }
-  ]
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon128.png"
+  }
 }
 
