--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
     "tabs",
     "activeTab",
     "storage",
-    "webNavigation"
+    "webNavigation",
+    "contextMenus"
   ],
   "background": {
     "service_worker": "background.js"
